--- a/product-grid.html
+++ b/product-grid.html
@@ -68,9 +68,9 @@
                                         <li class="drop"><a href="auction.html">phiên đấu giá</a>
                                             
                                                     <ul class="dropdown">
-                                                        <li><a href="blog.html">phiên sắp diễn ra</a></li>
-                                                        <li><a href="product-grid.html">phiên đang diễn ra</a></li>
-                                                        <li><a href="product-details.html">phiên đã kết thúc</a></li>
+                                                        <li><a href="sapdienra.html">phiên sắp diễn ra</a></li>
+                                                        <li><a href="dangdienra.html">phiên đang diễn ra</a></li>
+                                                        <li><a href="daketthuc.html">phiên đã kết thúc</a></li>
                                                     </ul>
                                               
                                         </li>
