--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                                         <li class="drop"><a href="index.html">Trang Chủ</a></li>
                                         <li class="drop"><a href="#">Dịch Vụ</a>
                                             <ul class="dropdown">
-                                                <li><a href="">Đấu Giá</a></li>
+                                                <li><a href="product-grid.html">Đấu Giá</a></li>
                                                 <li><a href="">Đăng Đấu Giá</a></li>
                                             </ul>
                                         </li>
