--- a/blog.html
+++ b/blog.html
@@ -202,44 +202,27 @@
             <!-- End Cart Panel -->
         </div>
         <!-- End Offset Wrapper -->
-        <!-- Start Bradcaump area -->
-        <div class="ht__bradcaump__area" style="background: rgba(0, 0, 0, 0) url(images/bg/4.jpg) no-repeat scroll center center / cover ;">
-            <div class="ht__bradcaump__wrap">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xs-12">
-                            <div class="bradcaump__inner">
-                                <nav class="bradcaump-inner">
-                                  <a class="breadcrumb-item" href="index.html">Home</a>
-                                  <span class="brd-separetor"><i class="zmdi zmdi-chevron-right"></i></span>
-                                  <span class="breadcrumb-item active">Blog</span>
-                                </nav>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Bradcaump area -->
         <!-- Start Blog Area -->
         <section class="htc__blog__area bg__white ptb--100">
             <div class="container">
                 <div class="row">
-                    <div class="ht__blog__wrap blog--page clearfix">
+                    <div class="ht__blog__wrap clearfix">
                         <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
+                        <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
                             <div class="blog">
                                 <div class="blog__thumb">
                                     <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/1.jpg" alt="blog images">
+                                        <img src="images/blog/blog-img/1.webp" alt="blog images">
                                     </a>
                                 </div>
                                 <div class="blog__details">
                                     <div class="bl__date">
                                         <span>March 22, 2016</span>
                                     </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <h2><a href="blog-details.html">Cần chuyên nghiệp trong đấu giá nghệ thuật
+                                    </a></h2>
+                                    <p>Trong bối cảnh còn nhiều khó khăn, nhất là nạn tranh giả từ lâu đã “làm khó” cho cả giới sáng tác và cơ quan quản lý, sự ra đời và hoạt động của các nhà đấu giá nghệ thuật là nỗ lực đáng khích lệ. Thời gian gần đây, một số nhà đấu giá trong nước đã tổ chức nhiều phiên đấu giá công khai, thu hút một lượng khách hàng là các nhà sưu tập, người yêu nghệ thuật trong và ngoài nước tham gia; được dư luận quan tâm, chú ý.
+                                    </p>
                                     <div class="blog__btn">
                                         <a href="blog-details.html">Read More</a>
                                     </div>
@@ -248,19 +231,22 @@
                         </div>
                         <!-- End Single Blog -->
                         <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
+                        <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
                             <div class="blog">
                                 <div class="blog__thumb">
                                     <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/2.jpg" alt="blog images">
+                                        <img src="images/blog/blog-img/2.webp" alt="blog images">
                                     </a>
                                 </div>
                                 <div class="blog__details">
                                     <div class="bl__date">
                                         <span>May 22, 2017</span>
                                     </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <h2><a href="blog-details.html">Nhận diện thủ đoạn của tội phạm trong hoạt động đấu giá ...
+                                    </a></h2>
+                                    <p>Tình hình vi phạm pháp luật và tội phạm trong lĩnh vực đấu giá, đấu thầu thời gian qua vẫn diễn biến rất phức tạp, tiềm ẩn nhiều nguy cơ, khó khăn, thách thức, tác động tiêu cực đến công tác đảm bảo ANTT.
+
+                                    </p>
                                     <div class="blog__btn">
                                         <a href="blog-details.html">Read More</a>
                                     </div>
@@ -269,145 +255,22 @@
                         </div>
                         <!-- End Single Blog -->
                         <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
+                        <div class="col-md-6 col-lg-4 col-sm-6 col-xs-12">
                             <div class="blog">
                                 <div class="blog__thumb">
                                     <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/3.jpg" alt="blog images">
+                                        <img src="images/blog/blog-img/3.png" alt="blog images">
                                     </a>
                                 </div>
                                 <div class="blog__details">
                                     <div class="bl__date">
                                         <span>March 22, 2018</span>
                                     </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="blog__btn">
-                                        <a href="blog-details.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Blog -->
-                        <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
-                            <div class="blog">
-                                <div class="blog__thumb">
-                                    <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/3.jpg" alt="blog images">
-                                    </a>
-                                </div>
-                                <div class="blog__details">
-                                    <div class="bl__date">
-                                        <span>March 22, 2016</span>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="blog__btn">
-                                        <a href="blog-details.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Blog -->
-                        <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
-                            <div class="blog">
-                                <div class="blog__thumb">
-                                    <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/2.jpg" alt="blog images">
-                                    </a>
-                                </div>
-                                <div class="blog__details">
-                                    <div class="bl__date">
-                                        <span>May 22, 2017</span>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="blog__btn">
-                                        <a href="blog-details.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Blog -->
-                        <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
-                            <div class="blog">
-                                <div class="blog__thumb">
-                                    <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/1.jpg" alt="blog images">
-                                    </a>
-                                </div>
-                                <div class="blog__details">
-                                    <div class="bl__date">
-                                        <span>March 22, 2018</span>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="blog__btn">
-                                        <a href="blog-details.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Blog -->
-                        <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
-                            <div class="blog">
-                                <div class="blog__thumb">
-                                    <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/1.jpg" alt="blog images">
-                                    </a>
-                                </div>
-                                <div class="blog__details">
-                                    <div class="bl__date">
-                                        <span>March 22, 2016</span>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="blog__btn">
-                                        <a href="blog-details.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Blog -->
-                        <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
-                            <div class="blog">
-                                <div class="blog__thumb">
-                                    <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/2.jpg" alt="blog images">
-                                    </a>
-                                </div>
-                                <div class="blog__details">
-                                    <div class="bl__date">
-                                        <span>May 22, 2017</span>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                    <div class="blog__btn">
-                                        <a href="blog-details.html">Read More</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- End Single Blog -->
-                        <!-- Start Single Blog -->
-                        <div class="col-md-6 col-lg-4 col-sm-12 col-xs-12">
-                            <div class="blog">
-                                <div class="blog__thumb">
-                                    <a href="blog-details.html">
-                                        <img src="images/blog/blog-img/3.jpg" alt="blog images">
-                                    </a>
-                                </div>
-                                <div class="blog__details">
-                                    <div class="bl__date">
-                                        <span>March 22, 2018</span>
-                                    </div>
-                                    <h2><a href="blog-details.html">Lorem ipsum dolor sit amet, consec tetur adipisicing elit</a></h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisici elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                    <h2><a href="blog-details.html">TOP 5 địa chỉ website chuyên "săn" tài sản đấu
+                                        giá trực tuyến trên thế giới
+                                        </a></h2>
+                                    <p>Cùng với sự phát triển mạnh mẽ của mạng Internet và thương mại điện tử toàn cầu, giờ đây bạn không những có thể mua sắm, đấu giá các mặt hàng trong nước mà còn có thể đấu giá “xuyên biên giới”. Trong bài viết dưới đây, G-AUCTION sẽ chia sẻ đến bạn 5 địa chỉ chuyên "săn" tài sản đấu giá trực tuyến trên thế giới, cùng tham khảo nhé!
+                                    </p>
                                     <div class="blog__btn">
                                         <a href="blog-details.html">Read More</a>
                                     </div>
