--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                         <li class="drop"><a href="#">Dịch Vụ</a>
                                             <ul class="dropdown">
                                                 <li><a href="product-grid.html">Đấu Giá</a></li>
-                                                <li><a href="">Đăng Đấu Giá</a></li>
+                                                <li><a href="up_product.html">Đăng Đấu Giá</a></li>
                                             </ul>
                                         </li>
                                         <li class="drop"><a href="product-grid.html">vật phẩm</a>
@@ -75,10 +75,6 @@
                                               
                                         </li>
                                         <li class="drop"><a href="blog.html">blog</a>
-                                            <ul class="dropdown">
-                                                <li><a href="blog.html">Blog Grid</a></li>
-                                                <li><a href="blog-details.html">Blog Details</a></li>
-                                            </ul>
                                         </li>
                                         <li><a href="contact.html">Support Center</a></li>
                                     </ul>
