--- a/product-details.html
+++ b/product-details.html
@@ -59,8 +59,8 @@
                                         <li class="drop"><a href="index.html">Trang Chủ</a></li>
                                         <li class="drop"><a href="#">Dịch Vụ</a>
                                             <ul class="dropdown">
-                                                <li><a href="">Đấu Giá</a></li>
-                                                <li><a href="">Đăng Đấu Giá</a></li>
+                                                <li><a href="product-grid.html">Đấu Giá</a></li>
+                                                <li><a href="up_product.html">Đăng Đấu Giá</a></li>
                                             </ul>
                                         </li>
                                         <li class="drop"><a href="product-grid.html">vật phẩm</a>
