--- a/blog.html
+++ b/blog.html
@@ -313,7 +313,7 @@
                                                             <a href="#">reply</a>
                                                         </div>
                                                     </div>
-                                                    <span>July 15, 2016 at 2:39 am</span>
+                                                    <span>January 15, 2025 at 2:39 am</span>
                                                     <p>Bạn làm rất tốt, mọi thứ đều được chuẩn bị kỹ lưỡng và chuyên nghiệp!</p>
                                                 </div>
                                             </div>
@@ -330,7 +330,7 @@
                                                             <a href="#">reply</a>
                                                         </div>
                                                     </div>
-                                                    <span>July 15, 2016 at 2:39 am</span>
+                                                    <span>January 29, 2025 at 6:39 pm</span>
                                                     <p>Cách trình bày rõ ràng và logic, dễ tìm thông tin</p>
                                                 </div>
                                             </div>
@@ -347,7 +347,7 @@
                                                             <a href="#">reply</a>
                                                         </div>
                                                     </div>
-                                                    <span>July 15, 2016 at 2:39 am</span>
+                                                    <span>April 11, 2025 at 8:24 am</span>
                                                     <p>Cần cải thiện dịch vụ hỗ trợ trực tuyến.</p>
                                                 </div>
                                             </div>
@@ -363,7 +363,7 @@
                                                             <a href="#">reply</a>
                                                         </div>
                                                     </div>
-                                                    <span>July 15, 2016 at 2:39 am</span>
+                                                    <span>July 15, 2025 at 11:10 pm</span>
                                                     <p>Trải nghiệm người dùng rất tốt.</p>
                                                 </div>
                                             </div>
