update mobi dropdown

--- a/contact.html
+++ b/contact.html
@@ -88,14 +88,15 @@
                                             <li><a href="blog.html">blog</a></li>
                                             <li><a href="#">pages</a>
                                                 <ul>
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                                    <li><a href="auction.html">products auction</a></li>
+                                                    <li><a href="blog.html">Blog</a></li>                                           
+                                                    <li><a href="contact.html">contact</a></li>
+                                                    <!-- <li><a href="blog-details.html">Blog Details</a></li>
                                                     <li><a href="cart.html">Cart page</a></li>
                                                     <li><a href="checkout.html">checkout</a></li>
-                                                    <li><a href="contact.html">contact</a></li>
                                                     <li><a href="product-grid.html">product grid</a></li>
                                                     <li><a href="product-details.html">product details</a></li>
-                                                    <li><a href="wishlist.html">wishlist</a></li>
+                                                    <li><a href="wishlist.html">wishlist</a></li> -->
                                                 </ul>
                                             </li>
                                             <li><a href="contact.html">contact</a></li>
@@ -288,9 +289,9 @@
                         <!-- Start Single Footer Widget -->
                         <div class="col-md-3 col-sm-6 col-xs-12">
                             <div class="footer">
-                                <h2 class="title__line--2">ABOUT US</h2>
+                                <h2 class="title__line--2">Chúng Tôi</h2>
                                 <div class="ft__details">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim</p>
+                                    <p>G-AUTION là nền tảng đấu giá trực tuyến ứng dụng công nghệ để tối ưu giao dịch các tài sản có giá trị. Từ tranh nghệ thuật, đồ hiệu, đồ cổ đến NFT và BĐS – chúng tôi xây dựng một hệ sinh thái minh bạch, tiện lợi và đầy tiềm năng cho cả người bán lẫn nhà đầu tư.</p>
                                     <div class="ft__social__link">
                                         <ul class="social__link">
                                             <li><a href="#"><i class="icon-social-twitter icons"></i></a></li>
@@ -311,14 +312,11 @@
                         <!-- Start Single Footer Widget -->
                         <div class="col-md-2 col-sm-6 col-xs-12 xmt-40">
                             <div class="footer">
-                                <h2 class="title__line--2">information</h2>
+                                <h2 class="title__line--2">Điều Khoản</h2>
                                 <div class="ft__inner">
                                     <ul class="ft__list">
-                                        <li><a href="#">About us</a></li>
-                                        <li><a href="#">Delivery Information</a></li>
-                                        <li><a href="#">Privacy & Policy</a></li>
-                                        <li><a href="#">Terms  & Condition</a></li>
-                                        <li><a href="#">Manufactures</a></li>
+                                        <li><a href="#">Sử Dụng</a></li>
+                                        <li><a href="#">Bảo Mật</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -327,14 +325,12 @@
                         <!-- Start Single Footer Widget -->
                         <div class="col-md-2 col-sm-6 col-xs-12 xmt-40 smt-40">
                             <div class="footer">
-                                <h2 class="title__line--2">my account</h2>
+                                <h2 class="title__line--2">Chính Sách</h2>
                                 <div class="ft__inner">
                                     <ul class="ft__list">
-                                        <li><a href="#">My Account</a></li>
-                                        <li><a href="cart.html">My Cart</a></li>
-                                        <li><a href="#">Login</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="#">Văn Bản Pháp Quy</a></li>
+                                        <li><a href="">Bảo Mật Thông Tin</a></li>
+                                        <li><a href="#">Tổ Chức Đấu Giá</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -343,14 +339,11 @@
                         <!-- Start Single Footer Widget -->
                         <div class="col-md-2 col-sm-6 col-xs-12 xmt-40 smt-40">
                             <div class="footer">
-                                <h2 class="title__line--2">Our service</h2>
+                                <h2 class="title__line--2">Liên Hệ</h2>
                                 <div class="ft__inner">
                                     <ul class="ft__list">
-                                        <li><a href="#">My Account</a></li>
-                                        <li><a href="cart.html">My Cart</a></li>
-                                        <li><a href="#">Login</a></li>
-                                        <li><a href="wishlist.html">Wishlist</a></li>
-                                        <li><a href="checkout.html">Checkout</a></li>
+                                        <li><a href="#">Hotline</a></li>
+                                        <li><a href="cart.html">Email</a></li>                                      
                                     </ul>
                                 </div>
                             </div>
@@ -382,7 +375,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <div class="copyright__inner">
-                                <p>Copyright© <a href="https://freethemescloud.com/">Free themes Cloud</a> 2018. All right reserved.</p>
+                                <p>Copyright© <a href="https://www.facebook.com/share/15YEn2zC9e/">bồ iemm</a> 2025.</p>
                                 <a href="#"><img src="images/others/shape/paypol.png" alt="payment images"></a>
                             </div>
                         </div>
