--- a/product-details.html
+++ b/product-details.html
@@ -65,13 +65,13 @@
                                         </li>
                                         <li class="drop"><a href="product-grid.html">vật phẩm</a>
                                         </li>
-                                        <li class="drop"><a href="#">phiên đấu giá</a>
+                                        <li class="drop"><a href="auction.html">phiên đấu giá</a>
                                             
-                                                    <ul class="dropdown">
-                                                        <li><a href="blog.html">phiên sắp diễn ra</a></li>
-                                                        <li><a href="product-grid.html">phiên đang diễn ra</a></li>
-                                                        <li><a href="product-details.html">phiên đã kết thúc</a></li>
-                                                    </ul>
+                                            <ul class="dropdown">
+                                                <li><a href="sapdienra.html">phiên sắp diễn ra</a></li>
+                                                <li><a href="dangdienra.html">phiên đang diễn ra</a></li>
+                                                <li><a href="daketthuc.html">phiên đã kết thúc</a></li>
+                                            </ul>
                                               
                                         </li>
                                         <li class="drop"><a href="blog.html">blog</a>
@@ -91,14 +91,15 @@
                                             <li><a href="blog.html">blog</a></li>
                                             <li><a href="#">pages</a>
                                                 <ul>
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                                    <li><a href="auction.html">products auction</a></li>
+                                                    <li><a href="blog.html">Blog</a></li>                                           
+                                                    <li><a href="contact.html">contact</a></li>
+                                                    <!-- <li><a href="blog-details.html">Blog Details</a></li>
                                                     <li><a href="cart.html">Cart page</a></li>
                                                     <li><a href="checkout.html">checkout</a></li>
-                                                    <li><a href="contact.html">contact</a></li>
                                                     <li><a href="product-grid.html">product grid</a></li>
                                                     <li><a href="product-details.html">product details</a></li>
-                                                    <li><a href="wishlist.html">wishlist</a></li>
+                                                    <li><a href="wishlist.html">wishlist</a></li> -->
                                                 </ul>
                                             </li>
                                             <li><a href="contact.html">contact</a></li>
@@ -248,6 +249,9 @@
                                 </ul>
                                 <ul  class="pro__prize">                                  
                                     <li>Bước giá : $5.000</li>
+                                </ul>
+                                <ul  class="pro__prize">                                  
+                                    <li>Auction time : <span id="countdown" style="color: red;"></span></li>
                                 </ul>
                                 <p class="pro__info">Được vẽ vào đầu những năm 1940, tác phẩm thể hiện vẻ đẹp của người thiếu nữ. Một thiếu nữ đang chăm chú đọc sách, người còn lại đắm chìm trong suy tư. Hai cô gái mặc áo dài truyền thống, giúp tôn lên đường cong mềm mại và vóc dáng thon thả của họ. Với mái tóc được búi cao tinh tế và đôi môi đỏ mọng, những cô gái trông thật duyên dáng và thanh lịch. Gương mặt trái xoan của thiếu nữ là đặc trưng cho phong cách của họa sĩ trong thời kỳ này, nhấn mạnh tiêu chuẩn vẻ đẹp Việt Nam.<br><br>
                                     Phụ kiện được sử dụng trong bố cục tranh cũng góp phần tô đậm nét Việt. Thật vậy, chiếc gối tựa được một trong hai thiếu nữ sử dụng cùng chiếc hộp nhỏ bằng gỗ là những đồ vật châu Á tiêu biểu. Nếu ảnh hưởng phương Đông ngập tràn trong tác phẩm, kho tàng lịch sử nghệ thuật phương Tây cũng hiện hữu nơi đây.<br><br>
