--- a/blog.html
+++ b/blog.html
@@ -87,14 +87,15 @@
                                             <li><a href="blog.html">blog</a></li>
                                             <li><a href="#">pages</a>
                                                 <ul>
-                                                    <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
+                                                    <li><a href="auction.html">products auction</a></li>
+                                                    <li><a href="blog.html">Blog</a></li>                                           
+                                                    <li><a href="contact.html">contact</a></li>
+                                                    <!-- <li><a href="blog-details.html">Blog Details</a></li>
                                                     <li><a href="cart.html">Cart page</a></li>
                                                     <li><a href="checkout.html">checkout</a></li>
-                                                    <li><a href="contact.html">contact</a></li>
                                                     <li><a href="product-grid.html">product grid</a></li>
                                                     <li><a href="product-details.html">product details</a></li>
-                                                    <li><a href="wishlist.html">wishlist</a></li>
+                                                    <li><a href="wishlist.html">wishlist</a></li> -->
                                                 </ul>
                                             </li>
                                             <li><a href="contact.html">contact</a></li>
