--- a/up_product.html
+++ b/up_product.html
@@ -191,26 +191,27 @@
                               </nav>
 
                               <div class="mobile-menu clearfix visible-xs visible-sm">
-                                  <nav id="mobile_dropdown">
-                                      <ul>
-                                          <li><a href="index.html">Home</a></li>
-                                          <li><a href="blog.html">blog</a></li>
-                                          <li><a href="#">pages</a>
-                                              <ul>
-                                                  <li><a href="blog.html">Blog</a></li>
-                                                  <li><a href="blog-details.html">Blog Details</a></li>
-                                                  <li><a href="cart.html">Cart page</a></li>
-                                                  <li><a href="checkout.html">checkout</a></li>
-                                                  <li><a href="contact.html">contact</a></li>
-                                                  <li><a href="product-grid.html">product grid</a></li>
-                                                  <li><a href="product-details.html">product details</a></li>
-                                                  <li><a href="wishlist.html">wishlist</a></li>
-                                              </ul>
-                                          </li>
-                                          <li><a href="contact.html">contact</a></li>
-                                      </ul>
-                                  </nav>
-                              </div>  
+                                <nav id="mobile_dropdown">
+                                    <ul>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="blog.html">blog</a></li>
+                                        <li><a href="#">pages</a>
+                                            <ul>
+                                                <li><a href="auction.html">products auction</a></li>
+                                                <li><a href="blog.html">Blog</a></li>                                           
+                                                <li><a href="contact.html">contact</a></li>
+                                                <!-- <li><a href="blog-details.html">Blog Details</a></li>
+                                                <li><a href="cart.html">Cart page</a></li>
+                                                <li><a href="checkout.html">checkout</a></li>
+                                                <li><a href="product-grid.html">product grid</a></li>
+                                                <li><a href="product-details.html">product details</a></li>
+                                                <li><a href="wishlist.html">wishlist</a></li> -->
+                                            </ul>
+                                        </li>
+                                        <li><a href="contact.html">contact</a></li>
+                                    </ul>
+                                </nav>
+                            </div>  
                           </div>
                           <div class="col-md-3 col-lg-2 col-sm-4 col-xs-4">
                               <div class="header__right">
