--- a/cart.html
+++ b/cart.html
@@ -80,7 +80,7 @@
                                                 <li><a href="blog-details.html">Blog Details</a></li>
                                             </ul>
                                         </li>
-                                        <li><a href="contact.html">Support Center</a></li>
+                                        <li><a href="contact.html">hỗ trợ</a></li>
                                     </ul>
                                 </nav>
 
