--- a/auction.html
+++ b/auction.html
@@ -76,7 +76,7 @@
                                         </li>
                                         <li class="drop"><a href="blog.html">blog</a>
                                         </li>
-                                        <li><a href="contact.html">Support Center</a></li>
+                                        <li><a href="contact.html">hỗ trợ</a></li>
                                     </ul>
                                 </nav>
                                 <div class="mobile-menu clearfix visible-xs visible-sm">
