--- a/daketthuc.html
+++ b/daketthuc.html
@@ -77,7 +77,7 @@
                                         <li class="drop"><a href="blog.html">blog</a>
                                       
                                         </li>
-                                        <li><a href="contact.html">Support Center</a></li>
+                                        <li><a href="contact.html">hỗ trợr</a></li>
                                     </ul>
                                 </nav>
 
