--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                         </li>
                                         <li class="drop"><a href="blog.html">blog</a>
                                         </li>
-                                        <li><a href="contact.html">Support Center</a></li>
+                                        <li><a href="contact.html">Hỗ trợ</a></li>
                                     </ul>
                                 </nav>
 
@@ -109,10 +109,6 @@
                                     </div>
                                     <div class="header__account">
                                         <a href="#"><i class="icon-user icons"></i></a>
-                                    </div>
-                                    <div class="htc__shopping__cart">
-                                        <a class="cart__menu" href="#"><i class="icon-handbag icons"></i></a>
-                                        <a href="#"><span class="htc__qua">2</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -147,55 +143,6 @@
                 </div>
             </div>
             <!-- End Search Popap -->
-            <!-- Start Cart Panel -->
-            <div class="shopping__cart">
-                <div class="shopping__cart__inner">
-                    <div class="offsetmenu__close__btn">
-                        <a href="#"><i class="zmdi zmdi-close"></i></a>
-                    </div>
-                    <div class="shp__cart__wrap">
-                        <div class="shp__single__product">
-                            <div class="shp__pro__thumb">
-                                <a href="#">
-                                    <img src="images/product-2/sm-smg/1.jpg" alt="product images">
-                                </a>
-                            </div>
-                            <div class="shp__pro__details">
-                                <h2><a href="product-details.html">BO&Play Wireless Speaker</a></h2>
-                                <span class="quantity">QTY: 1</span>
-                                <span class="shp__price">$105.00</span>
-                            </div>
-                            <div class="remove__btn">
-                                <a href="#" title="Remove this item"><i class="zmdi zmdi-close"></i></a>
-                            </div>
-                        </div>
-                        <div class="shp__single__product">
-                            <div class="shp__pro__thumb">
-                                <a href="#">
-                                    <img src="images/product-2/sm-smg/2.jpg" alt="product images">
-                                </a>
-                            </div>
-                            <div class="shp__pro__details">
-                                <h2><a href="product-details.html">Brone Candle</a></h2>
-                                <span class="quantity">QTY: 1</span>
-                                <span class="shp__price">$25.00</span>
-                            </div>
-                            <div class="remove__btn">
-                                <a href="#" title="Remove this item"><i class="zmdi zmdi-close"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                    <ul class="shoping__total">
-                        <li class="subtotal">Subtotal:</li>
-                        <li class="total__price">$130.00</li>
-                    </ul>
-                    <ul class="shopping__btn">
-                        <li><a href="cart.html">View Cart</a></li>
-                        <li class="shp__checkout"><a href="checkout.html">Checkout</a></li>
-                    </ul>
-                </div>
-            </div>
-            <!-- End Cart Panel -->
         </div>
         <!-- End Offset Wrapper -->
         <!-- Start Slider Area -->
@@ -281,9 +228,9 @@
                                         </a></h4><br>
                                         <h3 style="border:solid 1px gray; border-radius: 5px; ">Thời gian : 20/04/2025</h3>
                                         <ul class="fr__pro__prize">
-                                            <li class="old__prize">Giá khởi điểm : 20.000 USD</li>
+                                            <li class="old__prize">Giá khởi điểm : $20.000</li>
                                         </ul>
-                                        <h4>Bước giá : 500 USD</h4>
+                                        <h4>Bước giá : $500</h4>
                                     </div>
                                 </div>
                             </div>
@@ -310,9 +257,9 @@
                                         </a></h4><br>
                                         <h3 style="border:solid 1px gray; border-radius: 5px; ">Thời gian : 20/04/2025</h3>
                                         <ul class="fr__pro__prize">
-                                            <li class="old__prize" >Giá khởi điểm : 50.000 USD</li>
+                                            <li class="old__prize" >Giá khởi điểm : $50.000</li>
                                         </ul>
-                                        <h4>Bước giá : 500 USD</h4>
+                                        <h4>Bước giá : $500</h4>
                                     </div>
                                 </div>
                             </div>
@@ -338,9 +285,9 @@
                                         <h4><a href="product-details.html"> Ferrari 250GT SWB</a></h4><br>
                                         <h3>Thời gian : 30/04/2025</h3>                                        
                                         <ul class="fr__pro__prize">
-                                            <li class="old__prize">Giá khởi điểm : 18.000.000 USD</li>
+                                            <li class="old__prize">Giá khởi điểm : $18.000.000</li>
                                         </ul>
-                                        <h4>Bước giá : 500.000 USD</h4>
+                                        <h4>Bước giá : $500.000</h4>
                                     </div>
                                 </div>
                             </div>
@@ -366,9 +313,9 @@
                                         <h4><a href="product-details.html">Rubiks Lure </a></h4><br>
                                         <h3 style="border:solid 1px gray; border-radius: 5px; ">Thời gian : 05/05/2025</h3>
                                         <ul class="fr__pro__prize">
-                                            <li class="old__prize">Giá khởi điểm : 200.000 USD</li>
+                                            <li class="old__prize">Giá khởi điểm : #200.000</li>
                                         </ul>
-                                        <h4>Bước giá : 1.000 USD </h4>
+                                        <h4>Bước giá : $1.000 </h4>
                                     </div>
                                 </div>
                             </div>
