--- a/product-details.html
+++ b/product-details.html
@@ -76,7 +76,7 @@
                                         </li>
                                         <li class="drop"><a href="blog.html">blog</a>
                                         </li>
-                                        <li><a href="contact.html">Support Center</a></li>
+                                        <li><a href="contact.html">hỗ trợ</a></li>
                                     </ul>
                                 </nav>
 
@@ -240,10 +240,10 @@
                                     <li><i class="icon-star icons"></i></li>
                                 </ul>
                                 <ul  class="pro__prize">
-                                    <li class="old__prize">Giá khởi điểm : $770.000</li>
+                                    <li class="old__prize">Giá khởi điểm : $20.000</li>
                                 </ul>
                                 <ul  class="pro__prize">                                  
-                                    <li>Bước giá : $5.000</li>
+                                    <li>Bước giá : $500</li>
                                 </ul>
                                 <ul  class="pro__prize">                                  
                                     <li>Auction time : <span id="countdown" style="color: red;"></span></li>
