--- a/up_product.html
+++ b/up_product.html
@@ -186,7 +186,7 @@
                                       </li>
                                       <li class="drop"><a href="blog.html">blog</a>
                                       </li>
-                                      <li><a href="contact.html">Support Center</a></li>
+                                      <li><a href="contact.html">hỗ trợ</a></li>
                                   </ul>
                               </nav>
 
